sm/sm-b2b-connector/main/default/objects/DCM_LoggingEvent__e/fields/Exception_Message__c.field-meta.xml
<CustomField>
    <fullName>Exception_Message__c</fullName>
    <description>Stores Exception Message</description>
    <label>Exception Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>