sm/sm-b2b-connector/main/default/objects/DCM_LoggingEvent__e/fields/Exception_Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Exception_Stack_Trace__c</fullName>
    <label>Exception Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>