sm/sm-b2b-connector/main/default/objects/DCM_LoggingEvent__e/fields/Logging_Level__c.field-meta.xml
<CustomField>
    <fullName>Logging_Level__c</fullName>
    <label>Logging Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>