sm/sm-b2b-connector/main/default/objects/DCM_LoggingEvent__e/fields/Method_Name__c.field-meta.xml
<CustomField>
    <fullName>Method_Name__c</fullName>
    <label>Method Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>