sm/sm-b2b-connector/main/default/objects/DCM_LoggingEvent__e/fields/Module_Name__c.field-meta.xml
<CustomField>
    <fullName>Module_Name__c</fullName>
    <label>Module Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>