sm/sm-b2b-connector/main/default/objects/DCM_LoggingEvent__e/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>Id of record related to this log</description>
    <label>Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>