sm/sm-b2b-connector/main/default/objects/DCM_LoggingEvent__e/fields/Salesforce_Limits__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Limits__c</fullName>
    <label>Salesforce Limits</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>